[tool.poetry]
name = "htyaml"
version = "0.1.0"
description = ""
authors = ["Scott Odle <scott@sjodle.com>"]
readme = "README.md"

[tool.poetry.scripts]
htyaml = "htyaml:main"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
beautifulsoup4 = "^4.12.3"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
