[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [{ name = "Scott Odle", email = "scott@sjodle.com" }]
requires-python = "<4.0,>=3.12"
dependencies = [
    "pyyaml<7.0.0,>=6.0.2",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "click<9.0.0,>=8.1.8",
]
name = "htyaml"
version = "0.1.0"
description = "Hypertext, in YAML"
readme = "README.md"

[project.scripts]
htyaml = "htyaml:main"
